@@ -49,6 +49,11 @@
 	* bin/po-register: Stop rewrapping simple messages as none of their
 	lines will get overlong, but the URLs might mistakenly get wrapped.
 
+	* bin/generate_pages: Rename to 'generate-static-pages'.
+
+	* lib/config.py, lib/localweb.py: Make the paths for the static
+	domain and team pages more easily configurable.
+
 2007-06-22  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/i18n-aliases: Add the ability to generate a procmailrc
